--- a/index.html
+++ b/index.html
@@ -4,51 +4,40 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>UDP Programme Comms Dashboard</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.css" />
-  <script src="https://cdn.jsdelivr.net/npm/frappe-gantt/dist/frappe-gantt.min.js"></script>
+
+  <!-- Frappe Gantt (stable UMD build) -->
+  <link rel="stylesheet" href="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.css" />
+  <script src="https://unpkg.com/frappe-gantt@0.6.1/dist/frappe-gantt.min.js"></script>
+
+  <!-- Supabase JS v2 -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
   <style>
-    :root {
-      --bg: #0b0c10;
-      --card: #111318;
-      --muted: #9aa4b2;
-      --text: #e8eef7;
-      --accent: #4f46e5;
-      --ok: #22c55e;
-      --warn: #f59e0b;
-    }
+    :root { --bg:#0b0c10; --card:#111318; --muted:#9aa4b2; --text:#e8eef7; --accent:#4f46e5; --ok:#22c55e; --warn:#f59e0b; }
     html,body{height:100%}
-    body { margin: 0; background: var(--bg); color: var(--text); font: 14px/1.45 system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans"; }
-    .wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
-    .topbar { display: flex; gap: 12px; align-items: center; justify-content: space-between; flex-wrap: wrap; }
-    .brand { display:flex; gap:10px; align-items:center; }
-    .live-dot { width:10px; height:10px; border-radius:50%; background: var(--ok); box-shadow: 0 0 0 6px rgba(34,197,94,.15); animation: pulse 1.8s infinite; }
-    @keyframes pulse { 0%{box-shadow:0 0 0 0 rgba(34,197,94,.5)} 70%{box-shadow:0 0 0 10px rgba(34,197,94,0)} 100%{box-shadow:0 0 0 0 rgba(34,197,94,0)} }
-    .card { background: linear-gradient(180deg, rgba(255,255,255,.03), rgba(255,255,255,0)); border: 1px solid rgba(255,255,255,.08); border-radius: 16px; padding: 14px; }
-    .controls { display: flex; gap: 8px; align-items: center; flex-wrap: wrap; }
-    .controls > * { background: var(--card); color: var(--text); border: 1px solid rgba(255,255,255,.1); border-radius: 12px; padding: 10px 12px; }
-    select,button,input{ font: inherit }
-    .hint { color: var(--muted); font-size: 12px; }
-    #gantt { overflow: auto; background: var(--card); border: 1px solid rgba(255,255,255,.08); border-radius: 16px; }
-    .legend { display:flex; gap:16px; align-items:center; flex-wrap:wrap; color: var(--muted); font-size:12px; margin-top:8px }
-    .legend .sw { width:10px; height:10px; border-radius:3px; display:inline-block; margin-right:6px; }
-    /* Mobile friendly popup */
-    .details-container { max-width: 250px; word-wrap: break-word; }
-    @media (hover: none) and (pointer: coarse) {
-      .details-container { font-size: 14px; padding: 8px; }
-    }
-      /* Mobile tooltip/bottom-sheet for touch devices */
+    body{margin:0;background:var(--bg);color:var(--text);font:14px/1.45 system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial,"Noto Sans"}
+    .wrap{max-width:1100px;margin:24px auto;padding:0 16px}
+    .topbar{display:flex;gap:12px;align-items:center;justify-content:space-between;flex-wrap:wrap}
+    .brand{display:flex;gap:10px;align-items:center}
+    .live-dot{width:10px;height:10px;border-radius:50%;background:var(--ok);box-shadow:0 0 0 6px rgba(34,197,94,.15);animation:pulse 1.8s infinite}
+    @keyframes pulse{0%{box-shadow:0 0 0 0 rgba(34,197,94,.5)}70%{box-shadow:0 0 0 10px rgba(34,197,94,0)}100%{box-shadow:0 0 0 0 rgba(34,197,94,0)}}
+    .card{background:linear-gradient(180deg,rgba(255,255,255,.03),rgba(255,255,255,0));border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:14px}
+    .controls{display:flex;gap:8px;align-items:center;flex-wrap:wrap}
+    .controls>*{background:var(--card);color:var(--text);border:1px solid rgba(255,255,255,.1);border-radius:12px;padding:10px 12px}
+    .hint{color:var(--muted);font-size:12px}
+    #gantt{overflow:auto;background:var(--card);border:1px solid rgba(255,255,255,.08);border-radius:16px;min-height:420px;-webkit-overflow-scrolling:touch}
+    .legend{display:flex;gap:16px;align-items:center;flex-wrap:wrap;color:var(--muted);font-size:12px;margin-top:8px}
+    .legend .sw{width:10px;height:10px;border-radius:3px;display:inline-block;margin-right:6px}
+    /* mobile bottom-sheet */
     .mobile-pop{position:fixed;left:0;right:0;bottom:16px;margin:0 auto;max-width:640px;background:#0f1218;border:1px solid rgba(255,255,255,.12);border-radius:14px;box-shadow:0 12px 30px rgba(0,0,0,.4);padding:14px 16px;z-index:9999;display:none}
     .mobile-pop h4{margin:0 28px 6px 0;font-size:16px;font-weight:600;color:#e8eef7}
     .mobile-pop .meta{font-size:12px;color:#9aa4b2;margin-bottom:6px}
     .mobile-pop .notes{font-size:13px;color:#cfd6e0}
     .mobile-pop .close{position:absolute;right:10px;top:8px;cursor:pointer;background:transparent;border:0;color:#cfd6e0;font-size:20px}
-
-    /* Improve touch hit area */
-    #gantt svg .bar{stroke-width:6}
-    #gantt{ -webkit-overflow-scrolling: touch; }
-    #gantt svg{ touch-action: pan-x pan-y; }
-</style>
+    /* better touch targets */
+    #gantt svg{touch-action:pan-x pan-y}
+    #gantt svg .bar{stroke-width:6;pointer-events:auto}
+  </style>
 </head>
 <body>
   <div class="wrap">
@@ -76,24 +65,34 @@
         <span><span class="sw" style="background:#22c55e"></span>Done</span>
         <span><span class="sw" style="background:#f59e0b"></span>In progress</span>
       </div>
-      <div class="hint" style="margin-top:8px">Tap on a bar to see details. Times shown in your timezone.</div>
+      <div class="hint" style="margin-top:8px">Hover (desktop) or tap (mobile) a bar to see details.</div>
+    </div>
+
+    <!-- mobile sheet -->
+    <div class="mobile-pop" id="mPop">
+      <button class="close" aria-label="Close">×</button>
+      <h4 id="pop-title"></h4>
+      <div class="meta" id="pop-dates"></div>
+      <div class="notes" id="pop-notes"></div>
     </div>
   </div>
 
   <script>
-    const SUPABASE_URL = "https://YOUR-PROJECT.ref.supabase.co"; // replace
-    const SUPABASE_ANON_KEY = "YOUR-ANON-KEY"; // replace (read-only)
+    // 1) your Supabase credentials
+    const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
+    const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
 
+    // 2) connect
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
     const state = { view: 'Week', monthKey: keyFromDate(new Date()) };
-
     const monthSelect = document.getElementById('monthSelect');
     const btnDay = document.getElementById('viewDay');
     const btnWeek = document.getElementById('viewWeek');
     const btnMonth = document.getElementById('viewMonth');
     const refreshBtn = document.getElementById('refreshBtn');
     const ganttEl = document.getElementById('gantt');
+    const mPop = document.getElementById('mPop');
     let gantt;
 
     init();
@@ -111,17 +110,20 @@
       btnMonth.onclick = () => setView('Month');
       refreshBtn.onclick = () => render();
       monthSelect.onchange = () => { state.monthKey = monthSelect.value; render(); };
+      mPop.querySelector('.close').onclick = () => mPop.style.display = 'none';
+      document.addEventListener('click', (e)=>{
+        if(mPop.style.display==='none') return;
+        if(!mPop.contains(e.target) && !e.target.closest('.bar-wrapper')) mPop.style.display='none';
+      });
     }
 
     function setView(v){ state.view = v; if(gantt) gantt.change_view_mode(v); }
 
     function buildMonthPicker(){
       monthSelect.innerHTML = '';
-      const base = new Date();
-      base.setDate(1);
-      for(let offset=-2; offset<=9; offset++){
-        const d = new Date(base);
-        d.setMonth(d.getMonth()+offset);
+      const base = new Date(); base.setDate(1);
+      for(let o=-2;o<=9;o++){
+        const d = new Date(base); d.setMonth(d.getMonth()+o);
         const key = keyFromDate(d);
         const opt = document.createElement('option');
         opt.value = key;
@@ -132,20 +134,16 @@
     }
 
     function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
-
     function monthRangeFromKey(key){
       const [y,m] = key.split('-').map(Number);
       const start = new Date(y, m-1, 1);
-      const end = new Date(y, m, 0, 23, 59, 59, 999);
+      const end   = new Date(y, m, 0, 23, 59, 59, 999);
       return { start, end };
     }
 
     async function fetchTasks(){
-      const { data, error } = await supabase
-        .from('tasks')
-        .select('*')
-        .order('start_date', { ascending: true });
-      if(error){ console.error(error); return []; }
+      const { data, error } = await supabase.from('tasks').select('*').order('start_date', { ascending: true });
+      if (error) { console.error(error); return []; }
       const { start, end } = monthRangeFromKey(state.monthKey);
       return (data || []).filter(t => {
         const s = new Date(t.start_date);
@@ -159,15 +157,14 @@
       const tasks = rows.map(r => ({
         id: r.id,
         name: r.title,
-        start: formatDate(r.start_date),
-        end: formatDate(r.end_date || r.start_date),
+        start: toYMD(r.start_date),
+        end: toYMD(r.end_date || r.start_date),
         progress: Number(r.progress || 0),
         dependencies: (r.dependencies || '').trim(),
-        custom_class: progressClass(Number(r.progress || 0), r.color),
         notes: r.notes || ''
       }));
 
-      // Keep a quick lookup for tap details
+      // lookup for taps
       window.__TASKS_BY_ID__ = Object.fromEntries(tasks.map(t => [String(t.id), t]));
 
       ganttEl.innerHTML = '';
@@ -175,98 +172,51 @@
         view_mode: state.view,
         date_format: 'YYYY-MM-DD',
         language: 'en',
-        custom_popup_html: task => {
-          // Desktop hover popup remains
-          return `
-            <div class="details-container">
-              <div style="font-weight:600">${escapeHtml(task.name)}</div>
-              <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
-              ${task.notes ? `<div style="margin-top:4px;font-size:12px;color:#9aa4b2">${escapeHtml(task.notes)}</div>` : ''}
-            </div>`;
-        }
+        custom_popup_html: task => `
+          <div class="details-container" style="max-width:260px">
+            <div style="font-weight:600">${escapeHtml(task.name)}</div>
+            <div class="hint">${task._start.format('ll')} → ${task._end.format('ll')} · ${task.progress}%</div>
+            ${task.notes ? `<div style="margin-top:4px;font-size:12px;color:#9aa4b2">${escapeHtml(task.notes)}</div>` : ''}
+          </div>`
       });
 
-      enableMobileTapPop();
+      // bind mobile taps (delegation so it survives rerenders)
+      bindMobileTap();
     }
 
-    // Mobile-friendly bottom sheet (tap to open)
-    function enableMobileTapPop(){
-      // Create once
-      let pop = document.querySelector('.mobile-pop');
-      if(!pop){
-        pop = document.createElement('div');
-        pop.className = 'mobile-pop';
-        pop.innerHTML = `
-          <button class="close" aria-label="Close">×</button>
-          <h4 id="pop-title"></h4>
-          <div class="meta" id="pop-dates"></div>
-          <div class="notes" id="pop-notes"></div>`;
-        document.body.appendChild(pop);
-        pop.querySelector('.close').onclick = () => pop.style.display = 'none';
-        // Close when tapping outside
-        document.addEventListener('click', (e)=>{
-          if(pop.style.display==='none') return;
-          if(!pop.contains(e.target) && !e.target.closest('.bar-wrapper')) pop.style.display='none';
-        });
-      }
-
-      // Bind taps on bars
-      document.querySelectorAll('#gantt .bar-wrapper .bar').forEach(el => {
-        el.addEventListener('click', onTap);
-        el.addEventListener('touchstart', onTap, {passive:true});
-      });
-
-      function onTap(e){
-        const bar = e.currentTarget;
-        const group = bar.closest('.bar-wrapper');
-        const id = group?.getAttribute('data-id') || group?.querySelector('[data-id]')?.getAttribute('data-id');
-        const t = window.__TASKS_BY_ID__?.[id];
+    function bindMobileTap(){
+      const handler = (e) => {
+        const group = e.target.closest && e.target.closest('.bar-wrapper');
+        if(!group) return;
+        const id = group.getAttribute('data-id');
+        const t = window.__TASKS_BY_ID__ && window.__TASKS_BY_ID__[id];
         if(!t) return;
-        const start = new Date(t.start); const end = new Date(t.end);
+        const s = new Date(t.start); const ed = new Date(t.end);
         document.getElementById('pop-title').textContent = t.name;
-        document.getElementById('pop-dates').textContent = start.toLocaleDateString() + ' → ' + end.toLocaleDateString() + ' • ' + (t.progress|0) + '%';
+        document.getElementById('pop-dates').textContent = s.toLocaleDateString() + ' → ' + ed.toLocaleDateString() + ' • ' + (t.progress|0) + '%';
         document.getElementById('pop-notes').textContent = t.notes || '';
-        const pop = document.querySelector('.mobile-pop');
-        pop.style.display = 'block';
+        mPop.style.display = 'block';
+      };
+
+      // remove old then add fresh
+      if (window.__tapHandler__) {
+        ganttEl.removeEventListener('click', window.__tapHandler__);
+        ganttEl.removeEventListener('pointerup', window.__tapHandler__, true);
       }
+      window.__tapHandler__ = handler;
+      ganttEl.addEventListener('click', handler);
+      ganttEl.addEventListener('pointerup', handler, true);
     }
 
-    function progressClass(p, color){
-      const base = 'gantt-task';
-      const done = p >= 100;
-      const mid = p > 0 && p < 100;
-      return `${base} ${done ? 'is-done' : mid ? 'is-doing' : 'is-todo'}`;
-    }
+    function toYMD(d){ const x=new Date(d); const y=x.getFullYear(), m=String(x.getMonth()+1).padStart(2,'0'), dd=String(x.getDate()).padStart(2,'0'); return `${y}-${m}-${dd}`; }
+    function escapeHtml(s){ return String(s).replace(/[&<>\"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#039;'}[c])); }
 
     function subscribeRealtime(){
       supabase.channel('public:tasks')
-        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(async () => {
-          await render();
-        }, 400))
+        .on('postgres_changes', { event: '*', schema: 'public', table: 'tasks' }, debounce(async () => { await render(); }, 400))
         .subscribe();
     }
-
-    function formatDate(d){
-      const x = new Date(d);
-      const yyyy = x.getFullYear();
-      const mm = String(x.getMonth()+1).padStart(2, '0');
-      const dd = String(x.getDate()).padStart(2, '0');
-      return `${yyyy}-${mm}-${dd}`;
-    }
-
-    function debounce(fn, wait){
-      let t; return (...args) => { clearTimeout(t); t = setTimeout(() => fn.apply(this,args), wait); };
-    }
-
-    function escapeHtml(s){
-      return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','\"':'&quot;','\'':'&#039;'}[c]));
-    }
+    function debounce(fn,wait){ let t; return (...a)=>{ clearTimeout(t); t=setTimeout(()=>fn.apply(this,a),wait); } }
   </script>
-
-  <style>
-    .gantt .bar.is-done { opacity: .8; }
-    .gantt .bar.is-doing { filter: saturate(1.2); }
-    .gantt .bar.is-todo { opacity: .9; }
-  </style>
 </body>
 </html>
