--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     :root{
       --pending:#FFD8A8;   /* 0% (light orange) */
       --doing:#EDE8D0;     /* in-progress base (light ash) */
-      --done:#008000;      /* 100% (green) */
+      --done:#008000;      /* 100% (green overlay) */
       --done-base:#E8F5EA; /* soft green base under completed */
-      --border:#e5e7eb; --ink:#202124; --muted:#6b7280;
+      --ink:#202124; --muted:#6b7280; --border:#e5e7eb;
     }
 
     html,body{height:100%}
@@ -28,7 +28,8 @@
     .brand{font-weight:700;font-size:18px}
     .controls>*{margin-left:6px}
     .card{flex:1;display:flex;flex-direction:column;min-height:0;background:#fafafa;border:1px solid var(--border);border-radius:12px;padding:12px}
-    #gantt{flex:1;border:1px solid var(--border);border-radius:10px;background:#fff;min-height:340px}
+    #gantt{flex:1;border:1px solid var(--border);border-radius:10px;background:#fff;min-height:360px}
+
     .legend{display:flex;gap:18px;align-items:center;color:var(--muted);font-size:13px;margin-top:8px}
     .sw{width:12px;height:12px;border-radius:3px;margin-right:6px;display:inline-block;border:1px solid #d1d5db}
     .sw.pending{background:var(--pending)} .sw.doing{background:var(--doing)} .sw.done{background:var(--done)}
@@ -39,7 +40,8 @@
     .gantt .bar-label{stroke:none;font-weight:700;fill:#111827;font-size:14px}
 
     /* Tooltip */
-    .tip{position:absolute;background:#fff;border:1px solid var(--border);padding:8px 10px;border-radius:8px;box-shadow:0 10px 28px rgba(0,0,0,.12);font-size:13px;display:none;pointer-events:none;z-index:1000}
+    .tip{position:absolute;background:#fff;border:1px solid var(--border);padding:8px 10px;border-radius:8px;
+         box-shadow:0 10px 28px rgba(0,0,0,.12);font-size:13px;display:none;pointer-events:none;z-index:1000}
 
     /* Error banner */
     .err{display:none;margin:8px 0 0;padding:10px 12px;border-radius:8px;background:#fee2e2;color:#7f1d1d;border:1px solid #fecaca;font-size:13px}
@@ -73,9 +75,10 @@
   <div id="tip" class="tip"></div>
 
   <script>
-    // === Your Supabase project (from your screenshot/keys) ===
+    // === Your Supabase project ===
     const SUPABASE_URL = "https://wjfgntocqjtwaqamlbgc.supabase.co";
-    const SUPABASE_ANON_KEY ="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
+    const SUPABASE_ANON_KEY =
+      "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndqZmdudG9jcWp0d2FxYW1sYmdjIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzNjQzODIsImV4cCI6MjA3MDk0MDM4Mn0.IRwC5-0cv2rkaZbzR1Ovxnt6dl0m1IwJgcLl2I67YzQ";
 
     // UMD build exposes window.supabase
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -120,6 +123,7 @@
     function keyFromDate(d){ return `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`; }
     function monthRangeFromKey(key){ const [y,m]=key.split('-').map(Number); return { start:new Date(y,m-1,1), end:new Date(y,m,0,23,59,59,999) }; }
     function toYMD(d){ const x=new Date(d); return `${x.getFullYear()}-${String(x.getMonth()+1).padStart(2,'0')}-${String(x.getDate()).padStart(2,'0')}`; }
+    function css(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
 
     async function fetchTasks(){
       const { start, end } = monthRangeFromKey(state.monthKey);
@@ -129,7 +133,7 @@
         .order('start_date', { ascending: true });
 
       if (error) {
-        showError(`Fetch error (${status}): ${error.message}. Hint: check anon key, URL, RLS policy & that table "tasks" exists.`);
+        showError(`Fetch error (${status}): ${error.message}. Hint: verify anon key/URL, RLS policy, and that table "tasks" exists.`);
         console.error(error);
         return [];
       }
@@ -163,7 +167,7 @@
       attachTooltip();
     }
 
-    // ---------- Colors (locked to your scheme) ----------
+    // ---------- Colors (your scheme locked) ----------
     function paintBars(){
       document.querySelectorAll('#gantt .bar-wrapper').forEach(w=>{
         const id = w.getAttribute('data-id');
@@ -175,14 +179,14 @@
         const p = Math.max(0, Math.min(100, Number(t.progress||0)));
 
         if(p === 0){
-          bar.setAttribute('fill', getCSS('--pending'));
+          bar.setAttribute('fill', css('--pending'));
           prog.setAttribute('fill','rgba(0,0,0,0)');
         } else if(p >= 100){
-          bar.setAttribute('fill', getCSS('--done-base'));
-          prog.setAttribute('fill', getCSS('--done'));
+          bar.setAttribute('fill', css('--done-base'));
+          prog.setAttribute('fill', css('--done'));
         } else {
-          bar.setAttribute('fill', getCSS('--doing'));          // ash base
-          prog.setAttribute('fill', beigeRamp(p));              // deepening warm beige
+          bar.setAttribute('fill', css('--doing'));          // ash base
+          prog.setAttribute('fill', beigeRamp(p));           // deepening warm beige
         }
       });
     }
@@ -210,15 +214,13 @@
       });
     }
     function escapeHtml(s){ return String(s).replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
-    function getCSS(v){ return getComputedStyle(document.documentElement).getPropertyValue(v).trim(); }
 
     // ---------- Realtime ----------
     function subscribeRealtime(){
+      // Safe guard: if anon key is invalid, realtime will fail silently; the banner from fetch will still guide you.
       supabase.channel('public:tasks')
         .on('postgres_changes', { event:'*', schema:'public', table:'tasks' }, () => { render(); })
-        .subscribe((status) => {
-          if(status === 'SUBSCRIPTION_ERROR'){ showError('Realtime socket failed. Check anon key / network.'); }
-        });
+        .subscribe();
     }
 
     // ---------- Error banner helpers ----------
